<resources>
    <string name="app_name">Biwei</string>
    <string name="title_activity_home_demo">HomeDemoActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="textview1">title</string>
    <string name="textview2">desc</string>
    <string name="dddd">dddd</string>
    <string name="title_activity_demo">DemoActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="title_activity_home_third_demo">HomeThirdDemoActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="home_tab_1">首页</string>
    <string name="home_tab_2">行情</string>
    <string name="home_tab_3">智投</string>
    <string name="home_tab_4">快讯</string>
    <string name="home_tab_5">我的</string>

    <string name="menu_home_1">分享</string>
    <string name="menu_home_2">扫一扫</string>
    <string name="menu_home_3">Kline</string>
    <string name="menu_home_4">LineChart</string>
    <string name="menu_home_5">PieChart</string>
    <string name="menu_home_6">HalfPie</string>



</resources>
