<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.bb8.app.biwei.Market.view.HomeFragment">

    <item
        android:id="@+id/menu_home_1"
        android:orderInCategory="100"
        android:title="@string/menu_home_1"
        android:icon="@mipmap/ic_launcher"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_home_2"
        android:orderInCategory="100"
        android:title="@string/menu_home_2"
        app:showAsAction="never" />

    <item
    android:id="@+id/menu_home_3"
    android:orderInCategory="100"
    android:title="@string/menu_home_3"
    app:showAsAction="never" />

    <item
        android:id="@+id/menu_home_4"
        android:orderInCategory="100"
        android:title="@string/menu_home_4"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_home_5"
        android:orderInCategory="100"
        android:title="@string/menu_home_5"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_home_6"
        android:orderInCategory="100"
        android:title="@string/menu_home_6"
        app:showAsAction="never" />

</menu>